1. Метод .of [#70623 #454419] Исправлена ошибка в тестах